--- a/petclinic-chart/Chart.yaml
+++ b/petclinic-chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: petclinic_chart
+name: petclinic-chart
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
